# ai-invest-news

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  todo.md
docs/: ARCHITECTURE.md  FINAL_PERFORMANCE_TEST_REPORT.md  FREE_DATA_SOURCES_PLAN.md  INFORMATION_COLLECTION_OPTIMIZATION_PLAN.md  INTEGRATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md  PHASE1_QUICK_REFERENCE.md  PRECISION_DATA_SOURCES_PLAN.md
docs/archive/: CONCURRENT_RSS_MIGRATION.md  EVENT_MODULE_INTEGRATION.md  FILES_CHECKLIST.md  GIT_COMMIT_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_TEST_REPORT.md  QUICKSTART_CONCURRENT.md  RSS_CONCURRENT_README.md
examples/: concurrent_rss_examples.py
output/: .gitkeep
src/: __init__.py  dev_server.py  main.py  run_monitor.py  webapp_exporter.py
src/collectors/: __init__.py  alert_system.py  blog_collector.py  github_monitor.py  hackernews_monitor.py  notifier.py  precision_monitor.py  regulatory_collector.py  sec_edgar_collector.py  stock_monitor.py  twitter_monitor.py
src/content/: __init__.py  article_builder.py  article_renderer.py  article_schema.py
src/demo/: __init__.py  demo.py  demo1.py
src/event/: __init__.py  clustering.py  embedding.py  event_config.py  event_pipeline.py  event_summary.py
src/event/decision/: __init__.py  action_mapper.py  decision_config.py  decision_pipeline.py  importance_evaluator.py  signal_classifier.py
src/fetch/: __init__.py  article_fetcher.py  fetch_config.py  investment_extractor.py  light_features_extractor.py
src/search/: __init__.py  concurrent_rss_fetcher.py  rss_config.py  search_pipeline.py  search_pipeline_v2.py  search_result_process.py
src/selector/: __init__.py  investment_scorer.py  news_selector.py  selector_config.py
tests/: __init__.py  benchmark_rss_performance.py  conftest.py  safe_progressive_test.py  test_event_integration.py  test_exporter.py  test_full_flow.py  test_phase1_integration.py  test_week1_integration.py  test_week2_integration.py
webapp/: detail.html  event.html  index.html  test.html
webapp/css/: style.css
webapp/js/: app.js  detail.js  event.js
