[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-invest-news"
version = "1.3.0"
description = "AI Investment News Analysis System - Automated news aggregation, filtering, and AI-powered analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Team", email = "ai@example.com"}
]
keywords = [
    "ai",
    "investment",
    "news",
    "analysis",
    "rss",
    "nlp",
    "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    # 核心数据处理
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    # 机器学习和文本处理
    "scikit-learn>=1.0.0",
    "sentence-transformers>=2.2.0",
    "hdbscan>=0.8.29",
    # 网络请求和数据处理
    "requests>=2.25.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.9.0",
    "aiohttp>=3.8.0",
    # AI模型服务
    "dashscope>=1.14.0",
    # 日期时间处理
    "python-dateutil>=2.8.0",
    # 日志和配置
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0"
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/janwang001/ai-invest-news"
Documentation = "https://ai-invest-news.readthedocs.io"
Repository = "https://github.com/janwang001/ai-invest-news.git"
Issues = "https://github.com/janwang001/ai-invest-news/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.demo", "src.search", "src.selector", "src.fetch", "src.event", "src.content", "src.collectors"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
# 如需覆盖率报告，安装 pytest-cov 后取消注释:
# addopts = "--cov=src --cov-report=html --cov-report=term-missing"
